# ngo-suite

./: .env  .env.alt  .env.example  .env.server  .gitignore  Dockerfile.api  Dockerfile.api.server  Dockerfile.celery  Dockerfile.celery-beat  Dockerfile.celery-beat.server  Dockerfile.celery-worker  Dockerfile.celery.server  Dockerfile.nginx  Dockerfile.streamlit  Makefile  Makefile.server  README.md  alembic.ini  alembic.ini.server  cleanup.sh  docker-compose.dev.yml  docker-compose.gui.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.server  docker-composer.alt.yml  nginx.conf  poetry.lock.server  prometheus.yml  pyproject.toml  pyproject.toml.server  pytest.ini  requirements_streamlit.txt  streamlit_app.py  streamlit_app.py.server
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  dependabot-auto-merge.yml
.streamlit/: config.toml
alembic/: env.py
docs/: (Admin-Dashboard).txt  DEPLOYMENT.md  INSTALLATION.md  KOMPLETTE INSTALLATION AUF VPS MIT EXISTIERENDEM TRAEFIK.txt  PROJEKTE & BEDARFE VERWALTEN - VOLLSTÄNDIGE ANLEITUNG.txt  ZUGANG ZUR TRUEANGELS NGO SUITE v3.0.txt  dr-playbook.md
grafana/: grafana.ini  ldap.toml
grafana/dashboards/: api_monitoring.json  business_metrics.json  compliance.json  default.yml  infrastructure.json
grafana/datasources/: prometheus.yml
loki/: loki-config.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  002_add_transparency_and_needs.py  003_add_project_needs.py  004_update_inventory_for_needs.py
prometheus/: alertmanager.yml  alerts.yml  blackbox.yml  postgres_exporter.yml  prometheus.yml
prometheus/alerts/: blackbox_alerts.yml  postgres_alerts.yml  trueangels_alerts.yml
prometheus/recording/: rules.yml
public/: index.html  manifest.json  offline.html  sw.js
redis/: redis.conf
scripts/: __init__.py  backup.py  create_admin.py  generate_icons.sh  run_tests.sh  seed_data.py  validate_compose.sh  verify_integrity.py  warmup_cache.py
src/: __init__.py
src/adapters/: __init__.py  api.py  api_compliance.py  api_events.py  api_export.py  api_inventory.py  api_payments.py  api_rate_limits.py  api_reports.py  api_runner.py  api_social.py  auth.py  dependencies.py
src/api/: __init__.py  transparenz.py
src/core/: __inir__.py  config.py
src/core/compliance/: __init__.py  base.py  merkle.py
src/core/entities/: __init__.py  base.py  inventory.py  needs.py  transaction.py  transparency.py
src/core/events/: __init__.py  event_bus.py  event_store.py
src/core/rate_limiting/: __init__.py  base.py  circuit_breaker.py  redis_limiter.py
src/middleware/: __init__.py  rate_limit_middleware.py
src/monitoring/: __init__.py  metrics.py
src/ports/: __init__.py  payment_base.py  payment_klarna.py  payment_paypal.py  payment_stripe.py  social_base.py  social_facebook.py  social_linkedin.py  social_twitter.py
src/read_models/: __init__.py  donation_read_model.py  project_read_model.py  projections.py
src/services/: __init__.py  accounting.py  audit.py  backup_service.py  circuit_breaker_service.py  compliance_service.py  export_service.py  inventory_service.py  need_fulfillment_service.py  payment_service.py  pdf_generator.py  social_service.py
tests/: conftest.py  test_compliance.py  test_core_entities.py  test_event_sourcing.py  test_export.py  test_gui.py  test_inventory.py  test_payments.py  test_rate_limiting.py  test_reports.py  test_social.py
tests/test_chaos/: test_circuit_breaker.py
tests/test_integration/: test_api.py  test_event_sourcing.py
tests/test_performance/: test_load.py
tests/test_unit/: test_models.py
vault/: init.sh
vault/config/: config.hcl
wp-plugin/: readme.md  trueangels-ngo-suite.php  uninstall.php
wp-plugin/assets/css/: admin-style.css  frontend-style.css  transparenz.css
wp-plugin/assets/js/: admin-vue.js  frontend-vue.js
wp-plugin/includes/: class-api-client.php
wp-plugin/shortcodes/: transparenz.php
wp-plugin2/: transparency.php
wp-plugin2/assets/css/: transparency.css
wp-plugin2/assets/js/: transparency.js
