[tool.poetry]
name = "trueangels-ngo-suite"
version = "2.0.0"
description = "Enterprise NGO Suite mit Event Sourcing, SKR42, DSGVO-Compliance"
authors = ["TrueAngels e.V. <info@trueangels.de>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
pydantic = {extras = ["email"], version = "^2.5.0"}
redis = "^5.0.1"
celery = "^5.3.4"
stripe = "^7.5.0"
paypalrestsdk = "^1.13.0"
httpx = "^0.25.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.0"}
reportlab = "^4.0.4"
weasyprint = "^60.1"
plotly = "^5.18.0"
streamlit = "^1.28.1"
pandas = "^2.1.3"
hypothesis = "^6.88.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-benchmark = "^4.0.0"
locust = "^2.20.0"
vault = "^0.3.0"
boto3 = "^1.34.0"  # Für Wasabi S3

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
pre-commit = "^3.5.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["W291", "W293", "E501", "I001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cov_report = "html"
cov_fail_under = 95

[tool.poetry.scripts]
trueangels-api = "src.adapters.api:main"
trueangels-celery = "celery:main"