# FILE: pyproject.toml
# MODULE: TrueAngels NGO Suite v3.0.0 - Klassisches Poetry Format

[tool.poetry]
name = "trueangels-ngo-suite"
version = "3.0.0"
description = "Enterprise NGO Plattform für Transparenz, Spendenmanagement und Ukraine-Hilfe"
authors = ["TrueAngels e.V. <anto@angels4ukraine.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://angels4ukraine.de"
repository = "https://github.com/trueangels/ngo-suite"
documentation = "https://docs.angels4ukraine.de"
keywords = [
    "ngo",
    "donation",
    "transparency",
    "ukraine",
    "compliance",
    "gobd",
    "dsgvo",
    "event-sourcing",
    "cqrs",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = { extras = ["email"], version = "^2.9.0" }
python-multipart = "^0.0.9"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"
celery = "^5.4.0"
apscheduler = "^3.10.0"
stripe = "^10.0.0"
paypalrestsdk = "^1.13.0"
httpx = "^0.27.0"
tweepy = "^4.14.0"
facebook-sdk = "^3.1.0"
python-telegram-bot = "^21.0"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
sentry-sdk = { extras = ["fastapi"], version = "^2.13.0" }
reportlab = "^4.2.0"
weasyprint = "^62.0"
plotly = "^5.24.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
streamlit = "^1.37.0"
streamlit-option-menu = "^0.3.6"
streamlit-extras = "^0.2.5"
boto3 = "^1.34.0"
hvac = "^2.2.0"
pyotp = "^2.9.0"
qrcode = "^7.4.0"
cryptography = "^42.0.0"
bcrypt = "^4.1.0"
python-dateutil = "^2.8.2"
email-validator = "^2.1.0"
ujson = "^5.9.0"
orjson = "^3.9.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-benchmark = "^4.0.0"
hypothesis = "^6.108.0"
locust = "^2.31.0"
fakeredis = "^2.23.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^3.8.0"
bandit = "^1.7.0"
safety = "^3.2.0"
isort = "^5.13.0"

[tool.poetry.scripts]
trueangels-api = "src.adapters.api:main"
trueangels-celery = "celery:main"
trueangels-streamlit = "streamlit:run"
trueangels-backup = "scripts.backup:main"
trueangels-merkle = "src.core.compliance.merkle:daily_merkle_job"

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

# ... rest der Tool-Konfigurationen (black, ruff, mypy, etc.) ...
