# FILE: pyproject.toml
# MODULE: TrueAngels NGO Suite v3.0.0
# Poetry 2.1.2 - Vollständige Konfiguration für Ukraine-Hilfe

[tool.poetry]
name = "trueangels-ngo-suite"
version = "3.0.0"
description = "Enterprise NGO Plattform für Transparenz, Spendenmanagement und Ukraine-Hilfe"
authors = ["TrueAngels e.V. <anto@angels4ukraine.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://angels4ukraine.de"
repository = "https://github.com/trueangels/ngo-suite"
documentation = "https://docs.angels4ukraine.de"
keywords = [
    "ngo",
    "donation",
    "transparency",
    "ukraine",
    "compliance",
    "gobd",
    "dsgvo",
    "event-sourcing",
    "cqrs",
]

[tool.poetry.dependencies]
python = "^3.12"
# ==================== Core Framework ====================
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = { extras = ["email"], version = "^2.9.0" }
python-multipart = "^0.0.9"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-dotenv = "^1.0.0"

# ==================== Database & ORM ====================
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"

# ==================== Cache & Queue ====================
redis = "^5.0.0"
celery = "^5.4.0"
apscheduler = "^3.10.0"

# ==================== Payment Providers ====================
stripe = "^10.0.0"
paypalrestsdk = "^1.13.0"
httpx = "^0.27.0"

# ==================== Social Media ====================
tweepy = "^4.14.0"
facebook-sdk = "^3.1.0"
python-telegram-bot = "^21.0"

# ==================== Monitoring & Observability ====================
prometheus-client = "^0.24.1"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.61b0"
sentry-sdk = { extras = ["fastapi"], version = "^2.13.0" }

# ==================== PDF & Reporting ====================
reportlab = "^4.2.0"
weasyprint = "^62.0"
plotly = "^5.24.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"

# ==================== Frontend & GUI ====================
streamlit = "^1.37.0"
streamlit-option-menu = "^0.3.6"
streamlit-extras = "^0.2.5"

# ==================== Cloud & Storage ====================
boto3 = "^1.34.0"
hvac = "^2.2.0"

# ==================== Security & Compliance ====================
pyotp = "^2.9.0"
qrcode = "^7.4.0"
cryptography = "^42.0.0"
bcrypt = "^4.1.0"

# ==================== Utils ====================
python-dateutil = "^2.8.2"
email-validator = "^2.1.0"
ujson = "^5.9.0"
orjson = "^3.9.0"

# ==================== Testing ====================
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
pytest-benchmark = "^4.0.0"
hypothesis = "^6.108.0"
locust = "^2.31.0"
fakeredis = "^2.23.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^3.8.0"
bandit = "^1.7.0"
safety = "^3.2.0"
isort = "^5.13.0"

[tool.poetry.scripts]
trueangels-api = "src.adapters.api:main"
trueangels-celery = "celery:main"
trueangels-streamlit = "streamlit:run"
trueangels-backup = "scripts.backup:main"
trueangels-merkle = "src.core.compliance.merkle:daily_merkle_job"

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

# ==================== Black ====================
[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | scripts
)/
'''

# ==================== Ruff ====================
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "scripts",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TID"]
ignore = ["E501", "B008", "SIM108", "N805"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ARG001", "E402"]
"scripts/*" = ["T201", "ARG001"]
"src/ports/*.py" = ["N805"]
"src/adapters/*.py" = ["N805"]

# ==================== MyPy ====================
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

exclude = [
    "migrations/",
    "scripts/",
    "tests/",
    "venv/",
    ".venv/",
    "src/ports/",
    "src/adapters/",
    "src/services/",
    "src/read_models/",
    "src/middleware/",
    "src/monitoring/",
    "src/api/transparenz.py",
]

[[tool.mypy.overrides]]
module = "src.core.*"
ignore_missing_imports = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.core.entities.*"
ignore_missing_imports = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.core.compliance.*"
ignore_missing_imports = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.core.events.*"
ignore_missing_imports = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.core.rate_limiting.*"
ignore_missing_imports = false
disallow_untyped_defs = false

# ==================== Pytest ====================
[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--showlocals",
    "--maxfail=1",
    "-p",
    "no:cacheprovider",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (requires database)",
    "e2e: End-to-end tests (full stack)",
    "slow: Slow running tests",
    "chaos: Chaos engineering tests",
    "load: Load/performance tests",
    "benchmark: Benchmark tests",
    "asyncio: Asynchronous tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==================== Coverage ====================
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",
    "migrations/*",
    "venv/*",
    ".venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 85
show_missing = true

# ==================== Isort ====================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2
known_first_party = ["src"]
known_third_party = [
    "fastapi",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "redis",
    "celery",
    "stripe",
    "paypalrestsdk",
    "httpx",
    "jose",
    "passlib",
    "prometheus_client",
    "opentelemetry",
    "sentry_sdk",
    "reportlab",
    "weasyprint",
    "plotly",
    "pandas",
    "streamlit",
    "boto3",
    "hvac",
    "pyotp",
    "qrcode",
    "cryptography",
    "bcrypt",
    "pytest",
    "hypothesis",
    "locust",
]
